--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 </head>
 <body> <p>
     <h1>Breaking Barriers, Shaping Trends: Celebrating the Influence and Creativity of Women in Design.</h1>
-
+    <img src="cat.jpg" alt="c=kitty" width="220" height="306">
 <p>Women have always played a pivotal role in the design landscape, shaping its evolution and pushing the boundaries of innovation. This article shines a spotlight on three remarkable figures who have made significant contributions to the field. Each of these women embodies a unique approach to design, from Friedländer's pioneering work in typography to Scher's bold, iconic graphics that challenge the status quo, and Hische's handcrafted lettering that merges tradition with contemporary flair.</p> 
 
 <h2>Contents</h2>
