--- a/test.html
+++ b/test.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=="description" content="this is a web page on being goated">
     <title>HTML for dummies</title>
+    <link href="/CSS/women.css" rel="stylesheet" type="text/css">
 </head>
 <body> <p>
     <h1>Breaking Barriers, Shaping Trends: Celebrating the Influence and Creativity of Women in Design.</h1>
-    <img src="cat.jpg" alt="c=kitty" width="220" height="306">
+    <img src="/images/cat.jpg" alt="c=kitty" width="400" height="306">
 <p>Women have always played a pivotal role in the design landscape, shaping its evolution and pushing the boundaries of innovation. This article shines a spotlight on three remarkable figures who have made significant contributions to the field. Each of these women embodies a unique approach to design, from Friedländer's pioneering work in typography to Scher's bold, iconic graphics that challenge the status quo, and Hische's handcrafted lettering that merges tradition with contemporary flair.</p> 
 
 <h2>Contents</h2>
@@ -36,7 +37,7 @@
 <h2 id="Paula">Paula Scher</h2>
 
 <p>A principal designer for influential design consultancy Pentagram, Paula Scher, a prominent graphic designer and artist, has made indelible marks on the world of design through her innovative and bold creations. Scher's work is characterised by her exceptional use of typography and vibrant visual language. One of her most iconic contributions is her redesign of the visual identity for the Public Theater in New York City. Scher's approach was revolutionary; she combined expressive typography with dynamic imagery, creating a distinctive and memorable brand identity. Her use of large, bold lettering coupled with imaginative illustrations transformed the Public Theater's image, making it a testament to the power of graphic design in shaping public perception and cultural institutions.</p>
-
+<img src="/images/scher-publicTheater.jpg" alt="the logo for the public Theater">
     <p>Scher's versatility as a designer is reflected in her diverse body of work, which spans across various mediums such as branding, packaging, and environmental design. Her ability to seamlessly blend typography and imagery allows her to convey complex messages with clarity and creativity. Scher's designs often provoke thought and evoke emotions, capturing the essence of the subject matter while pushing the boundaries of conventional design. Her fearless approach to experimenting with different styles and techniques has earned her recognition and respect in the design community, inspiring aspiring designers to explore the limitless possibilities within the realm of graphic design.</p>
 
         <p>Beyond her artistic prowess, Scher's influence extends to her role as an educator and author. Through her lectures, writings, and mentorship, she has nurtured the talents of countless designers, shaping the next generation of creative thinkers. Scher's work continues to serve as a source of inspiration for designers worldwide, illustrating the profound impact of thoughtful and visually striking design on shaping culture and communication.</p>
@@ -55,7 +56,7 @@
 <h2 id="Jessica">Jessica Hische</h2>
 
 <p>Jessica Hische, a talented graphic designer, and lettering artist, has made significant contributions to the design world with her distinctive style and creative innovation. Her work is characterised by intricate lettering and playful illustrations, showcasing a perfect blend of traditional craftsmanship and modern design sensibilities. Hische's typographic creations are known for their intricate details and unique personality, capturing the essence of the subject matter in a visually compelling way. Her lettering work spans various mediums, from book covers and editorial designs to branding and advertising, demonstrating her versatility and skill in transforming words into captivating visual art.</p>
-
+<img src="/images/hische-dropcaps.jpg" alt="hische-dropcaps">
     <p>One of Hische's notable achievements is her expertise in the art of drop caps, where she reimagines and elevates the first letter of a text with intricate and ornate designs. Her mastery of typography shines through in these elaborate drop caps, which not only enhance the readability of the text but also serve as exquisite decorative elements, adding a touch of elegance and sophistication to the overall design. Hische's ability to infuse personality and emotion into her letterforms sets her apart, making her a sought-after designer for projects that require a unique and artistic approach to typography.</p>
 
         <p>Furthermore, Hische is dedicated to sharing her knowledge and passion for design with the world. Through her online presence, workshops, and speaking engagements, she inspires and educates aspiring designers, providing valuable insights into her creative process and the art of lettering. By fostering a sense of community and encouraging creativity, Hische continues to have a profound impact on the design community, shaping the future of typography and graphic design with her innovative and imaginative work.</p>
