--- a/test.html
+++ b/test.html
@@ -65,7 +65,7 @@
                 various design disciplines, including book cover and layout design. Her keen sense of balance, attention
                 to detail, and innovative use of imagery set her work apart. Friedländer's designs were characterised by
                 their elegance and simplicity, often incorporating captivating visuals that complemented the book's
-                content seamlessly. Her ability to create visually striking and cohesive designs made her a sought-after
+                content seamlessly. Her ability to create visual, striking and cohesive designs made her a sought-after
                 designer, shaping the aesthetics of numerous publications.</p>
 
 
