--- a/test.html
+++ b/test.html
@@ -25,13 +25,10 @@
         </div>
         <div class="container">
 
-            <p class="large">Women have always played a pivotal role in the design landscape, shaping its evolution and
-                pushing the boundaries of innovation. This article shines a spotlight on three remarkable figures who
-                have made significant contributions to the field. Each of these women embodies a unique approach to
-                design, from Friedländer's pioneering work in typography to Scher's bold, iconic graphics that challenge
-                the status quo, and Hische's handcrafted lettering that merges tradition with contemporary flair.</p>
-
-
+            
+<div class="container grid">
+<div class="grid-col-third">
+<nav>
             <h2>Contents</h2>
             <ul>
                 <li> <a href="#Elizabeth">Elizabeth Friedlander</a></li>
@@ -39,12 +36,18 @@
                 <li> <a href="#Jessica">Jessica Hische</a></li>
                 <li> <a href="#Further">Further Reading</a></li>
             </ul>
+</nav>
+</div>
 
 
 
 
-
-
+<div class="grid-col-twothirds">
+    <p class="large">Women have always played a pivotal role in the design landscape, shaping its evolution and
+        pushing the boundaries of innovation. This article shines a spotlight on three remarkable figures who
+        have made significant contributions to the field. Each of these women embodies a unique approach to
+        design, from Friedländer's pioneering work in typography to Scher's bold, iconic graphics that challenge
+        the status quo, and Hische's handcrafted lettering that merges tradition with contemporary flair.</p>
             <h3 id="Elizabeth"> Elizabeth Friedlander </h3>
             <p>Elizabeth Friedländer, a pioneering designer and typographer, made significant contributions to the field
                 of graphic design during the mid-20th century. Born in Germany, Friedländer fled the Nazi regime and
