--- a/CSS/flex-demo.html
+++ b/CSS/flex-demo.html
@@ -39,3 +39,17 @@ p.twothirds{
     </div>
 </body>
 </html>
+/* media queries */
+
+@media only screen and (max-width:1068px) {
+.container {
+margin: 0 24px 0 24px;
+}
+}
+@media only screen and (max-width: 768px) {
+}
+@media only screen and (max-width: 600px) {
+.container {
+margin: 0 16px 0 16px;
+}
+}
