--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name=="description" content="this is a web page on being goated">
+    <meta name="description" content="this is a web page on being goated">
     <title>HTML for dummies</title>
     <link href="/CSS/women.css" rel="stylesheet" type="text/css">
 </head>
